Colaboratory를 통해 생성됨

--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -5,27 +5,9 @@
     "colab": {
       "name": "Transformer.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "GHbSojopcuQt",
-        "F5wbKXAGMVHG",
-        "p0UlwrSodP4W",
-        "UlsdUBqJl0Da",
-        "BCnQH7AiLV2-",
-        "QR8sEJkwLcJD",
-        "cZ-CsJaiLr1n",
-        "sUTCxA5zcV1X",
-        "gUDzovjgelWh",
-        "jze3zAgBkzrk",
-        "RDWzMFiPqibs",
-        "uWQjLaU_d3Od",
-        "My3cgcvZjmi_",
-        "IInL-EfAw5Op",
-        "KzCntvBmybPy",
-        "fdSIdTJc3tiS",
-        "Obp9KZvp7X8c",
-        "icfsIbxXAHv9"
-      ],
-      "authorship_tag": "ABX9TyOzwAQbYqL+etfcBcgkWxnx"
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNJAu+gtjHk3iqWx8ncDqvN",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -36,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/JaeGwon-Lee/Flex_Study/blob/main/Transformer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -89,6 +81,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "kKYmEV5i_nEk"
+      },
+      "source": [
+        "#### Transformer 구조\n",
+        "\n",
+        "![](https://wikidocs.net/images/page/31379/transformer_attention_overview.PNG)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "F5wbKXAGMVHG"
       },
       "source": [
@@ -131,7 +134,7 @@
         "import matplotlib.pyplot as plt\n",
         "import tensorflow as tf"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -170,7 +173,7 @@
         "def call(self, inputs):\n",
         "  return inputs + self.pos_encoding[:, :tf.shape(inputs)[1], :]"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,7 +206,7 @@
         "plt.colorbar()\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,8 +244,8 @@
         "id": "AM79oj76CZy2"
       },
       "source": [
-        "어텐션 함수는 주어진 Query에 대해서 모든 Key와의 유사도를 구하고  \n",
-        "유사도를 가중치로 하여 키와 맵핑되어있는 각각의 Value에 반영함  \n",
+        "- 데이터의 국지적 중요도를 파악하고 활용하는데 쓰임  \n",
+        "- 어텐션 함수는 주어진 Query에 대해서 모든 Key와의 유사도를 구하고 유사도를 가중치로 하여 키와 맵핑되어있는 각각의 Value에 반영함  \n",
         "<br>  \n",
         "![](https://wikidocs.net/images/page/22893/%EC%BF%BC%EB%A6%AC.PNG)  "
       ]
@@ -415,7 +418,7 @@
         "\n",
         "  return output, attention_weights"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -445,7 +448,7 @@
         "                      [1000,6]], dtype=tf.float32)    # (4, 2)\n",
         "temp_q = tf.constant([[0, 10, 0]], dtype=tf.float32)    # (1, 3)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -462,7 +465,7 @@
         "print(temp_attn)\n",
         "print(temp_out)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,7 +492,7 @@
         "print(temp_attn)\n",
         "print(temp_out)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,7 +521,7 @@
         "print(temp_attn)\n",
         "print(temp_out)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,7 +629,7 @@
         "\n",
         "    return outputs"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -663,7 +666,7 @@
         "  # ( batch_size, 1, 1, key의 문장길이 )\n",
         "  return mask[:, tf.newaxis, tf.newaxis, :]    # tf.newaxis : 차원을 늘려줌 ex) (4,) -> (4,1)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -688,7 +691,7 @@
         "print(create_padding_mask(tf.constant([[1,21,777,0,0]])))    # tf.constant : 상수 텐서 만들기\n",
         "# 1의 값을 가진 위치의 열을 마스킹하는 용도"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -737,7 +740,7 @@
         "# outputs = tf.keras.layers.Dense(units=dff, activation='relu')(attention)\n",
         "# outputs = tf.keras.layers.Dense(units=d_model)(outputs)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -793,7 +796,7 @@
         "id": "11wqOFZBbh7u"
       },
       "source": [
-        "- 텐서의 마지막 차원(d_model)에 대해서 평균고 분산을 구하고, 이를 가지고 어떤 수식을 통해 값을 정규화하여 학습을 도움  \n",
+        "- 텐서의 마지막 차원(d_model)에 대해서 평균과 분산을 구하고, 이를 가지고 어떤 수식을 통해 값을 정규화하여 학습을 도움  \n",
         "<br> \n",
         "![](https://wikidocs.net/images/page/31379/layer_norm_new_1_final.PNG)\n"
       ]
@@ -865,7 +868,7 @@
         "\n",
         "  return tf.keras.Model(inputs=[inputs,padding_mask], outputs=outputs, name=name)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -899,7 +902,7 @@
         "  \n",
         "  return tf.keras.Model(inputs=[inputs,padding_mask], outputs=outputs, name=name)"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -949,7 +952,7 @@
         "  padding_mask = create_padding_mask(x)    # 패딩 마스크도 포함\n",
         "  return tf.maximum(look_ahead_mask, padding_mask)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -976,7 +979,7 @@
         "\n",
         "1 - tf.linalg.band_part(tf.ones((4, 4)), -1, 0)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1008,7 +1011,7 @@
         "# 룩-어헤드 마스크가 위쪽 삼각형 마스킹\n",
         "# 패딩 마스크가 3번째 열 마스킹"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1104,7 +1107,7 @@
         "  return tf.keras.Model(inputs=[inputs, enc_outputs, look_ahead_mask, padding_mask],\n",
         "                        outputs=outputs, name=name)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1142,7 +1145,7 @@
         "  return tf.keras.Model(inputs=[inputs, enc_outputs, look_ahead_mask, padding_mask],\n",
         "                        outputs=outputs, name=name)"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1180,7 +1183,7 @@
         "\n",
         "  return tf.keras.Model(inputs=[inputs, dec_inputs], outputs=outputs, name=name)"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1223,7 +1226,7 @@
         "\n",
         "tf.keras.utils.plot_model(small_transformer, to_file='small_transformer.png', show_shapes=True)"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1280,7 +1283,7 @@
         "\n",
         "  return tf.reduce_mean(loss)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1323,7 +1326,7 @@
         "\n",
         "    return tf.math.rsqrt(self.d_model) * tf.math.minimum(arg1, arg2)"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1352,7 +1355,7 @@
         "plt.ylabel('Learning Rate')\n",
         "plt.xlabel('Train Step')"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
